--- a/M3rdI.ipynb
+++ b/M3rdI.ipynb
@@ -574,7 +574,7 @@
     "----\n",
     "\n",
     "* Weblog Support <https://github.com/braddelong/Macroeconomics_3rd/blob/master/M3rdI.ipynb>\n",
-    "* nbViewer <https://nbviewer.jupyter.org/github.com/braddelong/Macroeconomics_3rd/blob/master/M3rdI.ipynb>\n",
+    "* nbViewer <https://nbviewer.jupyter.org/github/braddelong/Macroeconomics_3rd/blob/master/M3rdI.ipynb>\n",
     "\n",
     "&nbsp;\n",
     "\n",
